template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "domains_sbcapstones_com_email": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameFirst": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameLast": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_phone": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_email_1": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameFirst_1": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameLast_1": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_phone_1": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_email_2": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameFirst_2": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameLast_2": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_phone_2": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_email_3": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameFirst_3": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_nameLast_3": {
            "type": "SecureString"
        },
        "domains_sbcapstones_com_phone_3": {
            "type": "SecureString"
        },
        "dnszones_sbcapstones_com_name": {
            "defaultValue": "sbcapstones.com",
            "type": "String"
        },
        "virtualMachines_SubekCapstone_name": {
            "defaultValue": "SubekCapstone",
            "type": "String"
        },
        "domains_sbcapstones_com_name": {
            "defaultValue": "sbcapstones.com",
            "type": "String"
        },
        "networkInterfaces_subekcapstone972_name": {
            "defaultValue": "subekcapstone972",
            "type": "String"
        },
        "publicIPAddresses_SubekCapstone_ip_name": {
            "defaultValue": "SubekCapstone-ip",
            "type": "String"
        },
        "virtualNetworks_SubekCapstone_vnet_name": {
            "defaultValue": "SubekCapstone-vnet",
            "type": "String"
        },
        "networkSecurityGroups_SubekCapstone_nsg_name": {
            "defaultValue": "SubekCapstone-nsg",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/dnszones",
            "apiVersion": "2018-05-01",
            "name": "[parameters('dnszones_sbcapstones_com_name')]",
            "location": "global",
            "properties": {
                "zoneType": "Public"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkSecurityGroups_SubekCapstone_nsg_name')]",
            "location": "eastasia",
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "SSH",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "name": "[parameters('publicIPAddresses_SubekCapstone_ip_name')]",
            "location": "eastasia",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "20.187.107.34",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "capstonesubek",
                    "fqdn": "capstonesubek.eastasia.cloudapp.azure.com"
                },
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "name": "[parameters('virtualNetworks_SubekCapstone_vnet_name')]",
            "location": "eastasia",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Enabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-07-01",
            "name": "[parameters('virtualMachines_SubekCapstone_name')]",
            "location": "eastasia",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_subekcapstone972_name'))]"
            ],
            "plan": {
                "name": "3-0",
                "product": "moodle",
                "publisher": "bitnami"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "bitnami",
                        "offer": "moodle",
                        "sku": "3-0",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_SubekCapstone_name'), '_disk1_2265f4ef3af946f08f4c075e55e8363a')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_SubekCapstone_name'), '_disk1_2265f4ef3af946f08f4c075e55e8363a'))]"
                        },
                        "deleteOption": "Detach",
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_SubekCapstone_name')]",
                    "adminUsername": "subek",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "secrets": [],
                    "allowExtensionOperations": true,
                    "requireGuestProvisionSignal": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_subekcapstone972_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                    }
                }
            }
        },
        {
            "type": "Microsoft.DomainRegistration/domains",
            "apiVersion": "2021-02-01",
            "name": "[parameters('domains_sbcapstones_com_name')]",
            "location": "global",
            "dependsOn": [
                "[resourceId('Microsoft.Network/dnszones', parameters('dnszones_sbcapstones_com_name'))]"
            ],
            "properties": {
                "privacy": true,
                "autoRenew": false,
                "dnsType": "AzureDns",
                "dnsZoneId": "[resourceId('Microsoft.Network/dnszones', parameters('dnszones_sbcapstones_com_name'))]",
                "consent": {},
                "contactAdmin": {
                    "email": "[parameters('domains_sbcapstones_com_email')]",
                    "nameFirst": "[parameters('domains_sbcapstones_com_nameFirst')]",
                    "nameLast": "[parameters('domains_sbcapstones_com_nameLast')]",
                    "phone": "[parameters('domains_sbcapstones_com_phone')]"
                },
                "contactBilling": {
                    "email": "[parameters('domains_sbcapstones_com_email_1')]",
                    "nameFirst": "[parameters('domains_sbcapstones_com_nameFirst_1')]",
                    "nameLast": "[parameters('domains_sbcapstones_com_nameLast_1')]",
                    "phone": "[parameters('domains_sbcapstones_com_phone_1')]"
                },
                "contactRegistrant": {
                    "email": "[parameters('domains_sbcapstones_com_email_2')]",
                    "nameFirst": "[parameters('domains_sbcapstones_com_nameFirst_2')]",
                    "nameLast": "[parameters('domains_sbcapstones_com_nameLast_2')]",
                    "phone": "[parameters('domains_sbcapstones_com_phone_2')]"
                },
                "contactTech": {
                    "email": "[parameters('domains_sbcapstones_com_email_3')]",
                    "nameFirst": "[parameters('domains_sbcapstones_com_nameFirst_3')]",
                    "nameLast": "[parameters('domains_sbcapstones_com_nameLast_3')]",
                    "phone": "[parameters('domains_sbcapstones_com_phone_3')]"
                }
            }
        },
        {
            "type": "Microsoft.Network/dnszones/NS",
            "apiVersion": "2018-05-01",
            "name": "[concat(parameters('dnszones_sbcapstones_com_name'), '/@')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/dnszones', parameters('dnszones_sbcapstones_com_name'))]"
            ],
            "properties": {
                "TTL": 172800,
                "NSRecords": [
                    {
                        "nsdname": "ns1-37.azure-dns.com."
                    },
                    {
                        "nsdname": "ns2-37.azure-dns.net."
                    },
                    {
                        "nsdname": "ns3-37.azure-dns.org."
                    },
                    {
                        "nsdname": "ns4-37.azure-dns.info."
                    }
                ],
                "targetResource": {}
            }
        },
        {
            "type": "Microsoft.Network/dnszones/SOA",
            "apiVersion": "2018-05-01",
            "name": "[concat(parameters('dnszones_sbcapstones_com_name'), '/@')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/dnszones', parameters('dnszones_sbcapstones_com_name'))]"
            ],
            "properties": {
                "TTL": 3600,
                "SOARecord": {
                    "email": "azuredns-hostmaster.microsoft.com",
                    "expireTime": 2419200,
                    "host": "ns1-37.azure-dns.com.",
                    "minimumTTL": 300,
                    "refreshTime": 3600,
                    "retryTime": 300,
                    "serialNumber": 1
                },
                "targetResource": {}
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_SubekCapstone_nsg_name'), '/HTTP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SubekCapstone_nsg_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_SubekCapstone_nsg_name'), '/HTTPS')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SubekCapstone_nsg_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1020,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('networkSecurityGroups_SubekCapstone_nsg_name'), '/SSH')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SubekCapstone_nsg_name'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1030,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2020-11-01",
            "name": "[concat(parameters('virtualNetworks_SubekCapstone_vnet_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_SubekCapstone_vnet_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Enabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "name": "[parameters('networkInterfaces_subekcapstone972_name')]",
            "location": "eastasia",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_SubekCapstone_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_SubekCapstone_vnet_name'), 'default')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SubekCapstone_nsg_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_SubekCapstone_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_SubekCapstone_vnet_name'), 'default')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_SubekCapstone_nsg_name'))]"
                }
            }
        }
    ]
}
